block activation and rotate speed config

--- a/config/Settings.ini
+++ b/config/Settings.ini
@@ -1,15 +1,24 @@
 [Animation]
-;speed multiplier for interact animations. normal 1:1 speed is 1.0, 2.0 is 2 times faster, etc.
+; whether currently playing interactive animations block other activations from happening.
+; with this option active, the player can only take items as fast as it takes for their actual character to play the animation
+AnimationBlocksActivate = false
+
+; speed multiplier for interact animations. normal 1:1 speed is 1.0, 2.0 is 2 times faster, etc.
 AnimationSpeedMultiplier = 4.0
 
-;the player will reach up to take items higher 	than this relative height
+; the player will reach up to take items higher than this relative height
 TakeHighThreshold = 40.0
 
-;the player will bend down to take items lower than this relative height
+; the player will bend down to take items lower than this relative height
 TakeLowThreshold = -40.0
 
-;items in between will use normal grab animations
+; items in between will use normal grab animations
 
 [Camera]
 
 ForceThirdPerson = false
+
+[Rotation]
+
+; speed multiplier for rotation
+RotationSpeedMultiplier = 10.0
