feat: legacy take option, spine pitch/yaw limits

--- a/config/Settings.ini
+++ b/config/Settings.ini
@@ -1,4 +1,7 @@
 [Animation]
+; whether animation system uses dedicated legacy pickup animations instead of mathematical
+LegacyTakeAnimations = false
+
 ; whether currently playing interactive animations block other activations from happening.
 ; with this option active, the player can only take items as fast as it takes for their actual character to play the animation
 AnimationBlocksActivate = false
@@ -25,3 +28,7 @@ YawSpeedMultiplier = 10.0
 
 ; speed for spine pitch, in degrees per frame
 SpinePitchSpeedMultiplier = 10.0
+
+SpinePitchMinDegrees = -30.0
+
+SpinePitchMaxDegrees = 60.0
