feat: esl records

--- a/config/Forms.ini
+++ b/config/Forms.ini
@@ -1,11 +1,13 @@
 [Idles]
 
-Exit = 0x5901~Animated Interactions.esp
-SearchKneel = 0x5903~Animated Interactions.esp
-SearchChest = 0x5900~Animated Interactions.esp 
+Exit = 0x801~Animated Interactions.esp
+SearchKneel = 0x802~Animated Interactions.esp
+SearchChest = 0x800~Animated Interactions.esp 
 
-UseDoor = 0x1EE0C~Animated Interactions.esp
-Take = 0x1EE09~Animated Interactions.esp
-TakeHigh = 0x1EE0B~Animated Interactions.esp
-TakeLow = 0x1EE0A~Animated Interactions.esp
-TakeCustom = 0x1EE0D~Animated Interactions.esp
+UseDoor = 0x806~Animated Interactions.esp
+Take = 0x803~Animated Interactions.esp
+TakeHigh = 0x805~Animated Interactions.esp
+TakeLow = 0x804~Animated Interactions.esp
+TakeCustom = 0x807~Animated Interactions.esp
+
+[AnimObjects]
