fix: blocked/delayed/mistimed interactions

--- a/config/Settings.ini
+++ b/config/Settings.ini
@@ -9,10 +9,10 @@ AnimationBlocksActivate = false
 ; speed multiplier for interact animations. normal 1:1 speed is 1.0, 2.0 is 2 times faster, etc.
 AnimationSpeedMultiplier = 3.0
 
-; the player will reach up to take items higher than this relative height
+; the player will reach up to take items higher than this relative height LEGACY ONLY
 TakeHighThreshold = 40.0
 
-; the player will bend down to take items lower than this relative height
+; the player will bend down to take items lower than this relative height LEGACY ONLY
 TakeLowThreshold = -40.0
 
 ; items in between will use normal grab animations
@@ -23,11 +23,11 @@ ForceThirdPerson = false
 
 [Rotation]
 
-; speed for yaw, in degrees per frame
-YawSpeedMultiplier = 10.0
+; speed for yaw (rotation), in degrees per frame
+YawSpeedMultiplier = 8.0
 
 ; speed for spine pitch, in degrees per frame
-SpinePitchSpeedMultiplier = 10.0
+SpinePitchSpeedMultiplier = 8.0
 
 SpinePitchMinDegrees = -30.0
 
