--- a/config/Settings.ini
+++ b/config/Settings.ini
@@ -2,6 +2,12 @@
 ; whether animation system uses dedicated legacy pickup animations instead of mathematical
 LegacyTakeAnimations = false
 
+; disabled by default
+DoorAnimation = false
+
+; enabled by default
+ContainerAnimation = true
+
 ; whether currently playing interactive animations block other activations from happening.
 ; with this option active, the player can only take items as fast as it takes for their actual character to play the animation
 AnimationBlocksActivate = false
@@ -15,7 +21,7 @@ TakeHighThreshold = 40.0
 ; the player will bend down to take items lower than this relative height LEGACY ONLY
 TakeLowThreshold = -40.0
 
-; items in between will use normal grab animations
+
 
 [Camera]
 
